--- a/main.css
+++ b/main.css
@@ -3,7 +3,7 @@
  
     body{
         margin: 0pt;
-        background-image: url(./images/bkgrnd.jpg);
+        background-image: url(images/Bkgrnd.jpg);
         background-attachment: fixed;
         background-size: contain;
         background-clip: content-box;
